Fixed div overlapping

--- a/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
+++ b/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
@@ -87,6 +87,9 @@ body {
 	padding: 2%;
 	width: 100%;
 }
+.account_balance{
+	text-align:right;
+}
 .noAccDiv {
 	height: 100vh;
 	width: 100%;
